# imagine-dic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
doc/: Doxyfile
src/imagine/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
src/imagine/core/: coefficients.cpp  coefficients.hpp  image.hpp  interpolation.cpp  interpolation.hpp
src/imagine/gui/: main.cpp
src/imagine/math/: coefficients.cpp  coefficients.hpp  interpolation.cpp  interpolation.hpp
src/imagine/mesh/: mesh.hpp
src/imagine/utils/: primitives.hpp
tests/: CMakeLists.txt  test-1.cpp  test-coeffTable.cpp  test-interpolator.cpp  test-mesh.cpp
